[package]
name = "doom-rs"
version = "0.1.0"
authors = ["Aperolix <08.vodkas-rigole@icloud.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin="0.27.0"
gl_matrix="0.0"
glam="0.18"
rand="0.8"
bitflags="1.3"

[build-dependencies]
gl_generator = "0.14"