[package]
name = "doom-rs"
version = "0.1.0"
authors = ["Aperolix <08.vodkas-rigole@icloud.com>"]
exclude = ["crates/"]
edition = "2021"

[workspace]
members = [
	"crates/*"
] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin="0.30"
glutin-winit="0.2"
winit="0.27"
raw-window-handle="0.5"
cgmath="0.18"
bitflags="1.3"
earcutr="0.3"
kabal_app={path="crates/kabal_app", version="0.1.0"}
kabal_render={path="crates/kabal_render", version="0.1.0"}
